<resources>
    <string name="header.developer_contributor">Developer &amp; Contributor</string>
    <string name="header.overview">Overview</string>
    <string name="header.links">Links</string>
    <string name="app_name">mCerebrum</string>
    <string name="app_description">A set of serviceApps that collects sensor data, analyzes them and act accordingly</string>
    <string name="version">""</string>
    <string name="url_webpage">http://md2korg.github.io/mCerebrum/</string>
    <string name="url_release">https://github.com/MD2Korg</string>
    <string name="url_sourcecode">https://github.com/MD2Korg</string>
    <string name="app_developer">Syed Monowar Hossain\n(monowar.hossain@gmail.com)\n\nTimothy Hnat\n(twhnat@memphis.edu</string>
    <string name="app_copyright">Copyright © 2015, MD2K.org
\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:\n\n
* Redistributions of source status must retain the above copyright notice, this
  list of conditions and the following disclaimer.\n\n
* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation
  and/or other materials provided with the distribution.\n\n
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>

    <string name="settings">Admin Settings</string>
    <string name="button_ok">Ok</string>
    <string name="status">Application Status</string>
    <string name="tap">(Please TAP to start/stop)</string>
    <string name="text_permission">!!! PERMISSION DENIED !!! Could not continue…</string>
    <string name="text_app_not_configured">!!! Error: Application is not configured properly !!!</string>
    <string name="text_datakit_connection_error">!!! Error: DataKit Connection Error !!!</string>

</resources>
